--- a/python-server_side_rendering/templates/about.html
+++ b/python-server_side_rendering/templates/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    {% include 'header.html' %}
     <body>
-        {% include 'header.html' %}
-        <h1>Contact Us</h1>
+        <h1>About Us</h1>
         <p>Content describing the page</p>
-        {% include 'footer.html' %}
     </body>
+    {% include 'footer.html' %}
 </html>
